# keryx-miner

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
docs/superpowers/plans/: 2026-06-16-hashrate.md
docs/superpowers/specs/: 2026-06-16-hashrate-design.md
inference/src/: ai_payload.rs  fraud_proof.rs  lib.rs  model.rs  model_fixed.rs  task.rs
integrations/hiveos/: h-manifest.conf  h-run.sh
plugins/cuda/: Cargo.toml
plugins/cuda/kaspa-cuda-native/src/: kaspa-cuda.cu
plugins/cuda/resources/: keryx-cuda-sm61.ptx  keryx-cuda-sm75.ptx  keryx-cuda-sm86.ptx
plugins/cuda/src/: lib.rs  worker.rs
plugins/opencl/: Cargo.toml
plugins/opencl/resources/: keryx-opencl.cl
plugins/opencl/src/: lib.rs  worker.rs
proto/: rpc.proto
src/: cli.rs  escrow.rs  inference.rs  ipfs.rs  keryxd_messages.rs  lib.rs  main.rs  miner.rs  models.rs  pow.rs  slm.rs  watch.rs  xoshiro256starstar.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: statum_codec.rs
src/pow/: heavy_hash.rs
