[package]
name = "keryx-miner"
version = "0.2.1-GPU-0.7"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Elichai <elichai.turkel@gmail.com>"]
repository = "https://github.com/keryx-labs/keryx-miner"
readme = "README.md"
description = "A fast CPU & GPU miner for Keryx"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.8"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
futures-util = "0.3"
tokio-stream = {version = "0.1", features = ["net"]}
once_cell = "1"
num_cpus = "1"
rand = "0.8"
blake2b_simd = "1.0.0"
clap = { version = "3.0", features = ["color", "derive"]}
log = "0.4"
env_logger = "0.9"
keccak = { version = "0.1", optional = true }
parking = { package = "parking_lot", version = "0.12", optional = true }
libloading = "0.7"
tokio-util = {version = "0.7.0", features = ["codec"]}
serde_json = "1.0"
serde_repr = "0.1"
serde =  {version="1.0", features=["derive"]}
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1"
num = "0.4"
nix = "0.25"
hex = "0.4"
semver = "1.0"
# Phase-3 OPoI: SLM inference via candle
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ureq = { version = "2", features = ["tls"] }
base64 = "0.22"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros"] }

[features]
default = ["parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []
no-asm = ["keccak"]

[target.'cfg(target_os = "windows")'.dependencies]
keccak = "0.1"
kernel32-sys = "0.2"
win32console = "0.1"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }
cc = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
sha3 = { git = "https://github.com/elichai/hashes", branch = "cSHAKE" }

[workspace]
members = ["plugins/*"]
default-members = [".", "plugins/cuda", "plugins/opencl"]